Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_int.deca
// Ecriture int ratée

03;
